feat: unseen notis endpoint
